--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Main page</h1>
+    <p>GET localhost:8080/books?key=value  >>><a href="/books?key=value">here</a></p>
+    <p>GET localhost:8080/magazines?key=value  >>><a href="/magazines?key=value">here</a></p>
 </body>
 </html>
